# data-gov-au-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  data-gov-au.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  data-gov-au.rockspec  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  datagovau_sdk.py  datagovau_types.py  features.py  pyproject.toml
py/core/: control.py  operation.py  response.py  spec.py  utility_type.py
py/entity/: dataset_entity.py  metadata_entity.py  organization_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_dataset_direct.py  test_dataset_entity.py  test_exists.py  test_feature.py  test_metadata_direct.py  test_metadata_entity.py  test_netsim.py  test_organization_direct.py  test_organization_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  fetcher.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  result_basic.py  result_body.py  transform_request.py
(+453 files in other folders)
